--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "course-management-app-backend",
   "version": "1.0.0",
   "description": "course-management-app json database to deploy to the host",
-  "main": "server.js",
+  "main": "apiServer.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node apiServer.js"
   },
   "keywords": [
     "json-server,heroku, node, REST API"
