--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "course-management-app json database to deploy to the host",
   "main": "apiServer.js",
   "scripts": {
-    "start": "node apiServer.js"
+    "start": "node ./apiServer.js"
   },
   "keywords": [
     "json-server,heroku, node, REST API"
@@ -12,6 +12,6 @@
   "author": "Moustapha Ramadan",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.16.2"
+    "json-server": "^0.16.3"
   }
 }
